--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,16 @@
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="formato_ingrediente_sin_cantidad">%1$s de %2$s</string>
+    <string name="formato_ingrediente_con_cantidad">%1$s %2$s de %3$s</string>
+
+    <string name="description_foto">Foto de la receta</string>
+    <string name="receta_titulo_ingredientes">Ingredientes:</string>
+    <string name="receta_titulo_categorias">Categorías:</string>
+    <string name="receta_titulo_preparacion">Preparación:</string>
+    <string name="error404">Error 404</string>
 </resources>
