--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,8 @@
     <string name="receta_titulo_ingredientes">Ingredientes:</string>
     <string name="receta_titulo_categorias">Categorías:</string>
     <string name="receta_titulo_preparacion">Preparación:</string>
+    <string name="mapa_info_direccion">Dirección: %1$s</string>
+    <string name="mapa_info_descipcion">Descripción: %1$s</string>
     <string name="error404">Error 404</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
