--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array
-        name="navigationContents">
+    <string name="app_name">SmarTACC</string>
 
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
 
-        <item name="app_name">SmarTACC</item>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
-<<<<<<< HEAD
-        <item>Inicio</item>
-        <item>Recetas</item>
-        <item>Recetario</item>
-        <item>Busqueda</item>
-        <item>Categorias</item>
-        <item>Top 10</item>
-        <item>Creditos</item>
-    </string-array>
-    <string name="drawer_open">Open navigation drawer</string>
-    <string name="drawer_close">Close navigation drawer</string>
-</resources>
-=======
     <string name="action_example">Example action</string>
 
     <string name="action_settings">Settings</string>
@@ -38,4 +27,3 @@
     <string name="error404">Error 404</string>
     <string name="title_activity_maps">Map</string>
 </resources>
->>>>>>> origin/master
